<resources>
    <string name="app_name">Zad1_Kalkulator</string>
    <string name="append">Dodaj</string>
    <string name="subtract">Odejmij</string>
    <string name="multiply">Pomnóż</string>
    <string name="divide">Podziel</string>
    <string name="result">Wynik</string>
    <string-array name="first_number">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="second_number">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
</resources>
